Module principal affiche.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/config_version.hpp.cmake ${CMAKE_CUR
 SET( SOURCES_RC resources/resource.qrc )
 
 FILE( GLOB LEGACY_SRC "legacy/*.*" )
+FILE( GLOB FENETRE_PRINCIPALE_SRC "fenetrePrincipale/*.*" )
 FILE( GLOB RECHERCHE_MOT_SRC "rechercheMot/*.*" )
 FILE( GLOB RECHERCHE_MOT_GUI_SRC "rechercheMotGUI/*.*" )
 FILE( GLOB UTILITAIRES_SRC "utilitaires/*.*" )
@@ -26,6 +27,11 @@ FILE( GLOB UTILITAIRES_SRC "utilitaires/*.*" )
 SET( QTFILE_HEADERS
      legacy/fenetrePrincipale.h
      legacy/filtreEnter.h
+     fenetrePrincipale/FenetrePrincipale.hpp
+     fenetrePrincipale/ModuleChoixExercice.hpp
+     fenetrePrincipale/ModuleGestionFichier.hpp
+     fenetrePrincipale/ModuleMotsLoupes.hpp
+     fenetrePrincipale/ModulePrincipal.hpp
      rechercheMotGUI/chercheurMotWidget.hpp
      utilitaires/iRecupPageHTML.hpp
      utilitaires/rechercheGoogle.hpp
@@ -35,6 +41,7 @@ QT4_WRAP_CPP( QTFILE_HEADERS_MOC ${QTFILE_HEADERS} )
 QT4_ADD_RESOURCES( SOURCES_RC_SRC ${SOURCES_RC} )
 
 SOURCE_GROUP( Legacy FILES ${LEGACY_SRC} )
+SOURCE_GROUP( FenetrePrincipale FILES ${FENETRE_PRINCIPALE_SRC} )
 SOURCE_GROUP( RechercheMot FILES ${RECHERCHE_MOT_SRC} )
 SOURCE_GROUP( RechercheMotGUI FILES ${RECHERCHE_MOT_GUI_SRC} )
 SOURCE_GROUP( Utilitaires FILES ${UTILITAIRES_SRC} )
@@ -42,6 +49,7 @@ SOURCE_GROUP( Utilitaires FILES ${UTILITAIRES_SRC} )
 ADD_LIBRARY( src
 #             SHARED
              ${LEGACY_SRC}
+             ${FENETRE_PRINCIPALE_SRC}
              ${RECHERCHE_MOT_SRC}
              ${RECHERCHE_MOT_GUI_SRC}
              ${UTILITAIRES_SRC}
